chore: bg-img added

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,12 @@ nav .heading {
 
 }
 
+.old-book-img {
+    background-image: url(./knigi-zapisi-pero-ochki-retro-staroe-foto.jpg);
+    width: 100%;
+    height: auto;
+}
+
 .container {
     display: flex;
     justify-content: space-evenly;
@@ -76,8 +82,9 @@ nav .heading {
 .output-pointer {
     text-align: center;
     font-size: small;
+    font-weight: 100;
     margin-top: -1.3rem;
-    color: black;
+    color: white;
 }
 
 .output {
